--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
-    "storybook": "^9.1.12"
+    "storybook": "^9.1.12",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-a11y": "^9.1.12",
+    "@storybook/addon-docs": "^9.1.12",
+    "@storybook/addon-vitest": "^9.1.12",
+    "@storybook/nextjs": "^9.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.32",
+    "eslint-plugin-storybook": "^9.1.12",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@storybook/nextjs": "^9.1.12",
-    "@chromatic-com/storybook": "^4.1.1",
-    "@storybook/addon-docs": "^9.1.12",
-    "eslint-plugin-storybook": "^9.1.12",
-    "@storybook/addon-a11y": "^9.1.12",
-    "@storybook/addon-vitest": "^9.1.12"
+    "typescript": "^5"
   }
 }
