--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
+    "antd": "^5.27.5",
+    "dayjs": "^1.11.18",
     "next": "14.2.32",
     "next-themes": "^0.4.6",
     "react": "^18",
