--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.8",
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.5",
     "antd": "^5.27.5",
     "dayjs": "^1.11.18",
+    "graphql": "^16.11.0",
     "next": "14.2.32",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.65.0",
     "storybook": "^9.1.12",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
