--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.65.0",
     "storybook": "^9.1.12",
     "swiper": "^12.0.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
