--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
     "@apollo/client": "^4.0.8",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.5",
@@ -48,5 +49,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@ant-design/cssinjs": "1.24.0"
   }
 }
