--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@ant-design/cssinjs": "^1.24.0",
     "@apollo/client": "^4.0.8",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.5",
+    "@types/react-daum-postcode": "^1.6.1",
     "antd": "^5.27.5",
     "apollo-upload-client": "^19.0.0",
     "dayjs": "^1.11.18",
     "graphql": "^16.11.0",
+    "lucide-react": "^0.553.0",
     "next": "14.2.32",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.65.0",
     "storybook": "^9.1.12",
